Elementary sign-in, signup

--- a/SEBA_FitNex/app/views/Application/signup.html
+++ b/SEBA_FitNex/app/views/Application/signup.html
@@ -4,16 +4,16 @@
 <form action="@{Application.signupform()}" method="post">
 	<table BORDER="0">
    <tr>
-   <td>E-mail:</td><td><input type="text" name="Email" value="" size="25" maxlength="50" /></td>
+   <td>E-mail:</td><td><input type="text" name="email" value="" size="25" maxlength="50" /></td>
    </tr>
    <tr>
-   <td>Password:</td><td> <input type="text" name="password" value="" size="25" maxlength="50" /> </td>
+   <td>Password:</td><td> <input type="password" name="password" value="" size="25" maxlength="50" /> </td>
    </tr>>
    <tr>
-   <td>Full Name: </td><td><input type="text" name="fullName" value="" size="25" maxlength="50" /> </td>
+   <td>Full Name: </td><td><input type="text" name="fullname" value="" size="25" maxlength="50" /> </td>
    </tr>
    <tr>
-   <td>Date of birth:</td><td> <input type="text" name="dateOfBirth" value="" size="25" maxlength="50" /> </td>
+   <td>Date of birth:</td><td> <input type="text" name="dateofbirth" value="" size="25" maxlength="50" /> </td>
    </tr>>
    <tr>
    <td>Street:</td><td> <input type="text" name="street" value="" size="25" maxlength="50" /> </td>
