Parts of the model

--- a/SEBA_FitNex/app/views/Application/signup.html
+++ b/SEBA_FitNex/app/views/Application/signup.html
@@ -14,7 +14,17 @@
    </tr>
    <tr>
    <td>Date of birth:</td><td> <input type="text" name="dateofbirth" value="" size="25" maxlength="50" /> </td>
-   </tr>>
+   </tr>
+   <tr>
+   <td>Weight:</td><td> <input type="text" name="weight (kg)" value="" size="25" maxlength="50" /> </td>
+   </tr>
+   <tr>
+   <td>Gender:</td>
+   <td>
+   		<input type="radio" name="gender" value="male">Male<br>
+		<input type="radio" name="gender" value="female">Female
+	</td>
+   </tr>
    <tr>
    <td>Street:</td><td> <input type="text" name="street" value="" size="25" maxlength="50" /> </td>
    </tr>
