--- a/SEBA_FitNex/app/views/Application/home.html
+++ b/SEBA_FitNex/app/views/Application/home.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
     <script src="views/Application/script.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="public/stylesheets/mainStyle.css" type="text/css" />
+    <link rel="stylesheet" href="../public/stylesheets/mainStyle.css" type="text/css" />
     <title>FitNex</title>
     <meta content="omuyelijah" name="author" />
     <meta content="A general mockup for website pages" name="description" />
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="leftDiv">
-      <div id="logoDiv"> <img src="public/images/logo.png" style="height:100%;width:100%;"></img> </div>
+      <div id="logoDiv"> <img src="../public/images/logo.png" style="height:100%;width:100%;"></img> </div>
       <div id="leftNavDiv">
         <ul>
           <li><a class="current" href="home.html">Home</a></li>
@@ -27,16 +27,16 @@
       </div>
     </div>
     <div id="centreDiv">
-      <div id="inspireQuotesDiv"> <img src="public/images/banner_home.png" style="height:100%;width:100%;"></img></div>
+      <div id="inspireQuotesDiv"> <img src="../public/images/banner_home.png" style="height:100%;width:100%;"></img></div>
       <div id="breadCrumbsDiv"><a href="home.html">Home</a></div>
       <div id="mainContentDiv"> </div>
     </div>
     <div id="rightDiv">
     
     
-      <div id="loginBMIDiv">
+      <div id="loginBMIDiv">	 
       #{if !signedUser}
-        <form method="post" name="frmLogin" id="frmLogin" action="submit">
+        <form method="post" name="frmLogin" id="frmLogin" action="@{Application.signinform()}">
           <fieldset> <legend>Login</legend> <span>Username</span>    <input type="text"
               id="txtUsername" name="txtUsername" /> <br />
             <span>Password</span>     <input type="password" id="txtPassword" name="txtPassword" /><br />
@@ -46,7 +46,7 @@
         </form>
          #{/if}
          #{else}
-    		Welcome, ${signedUser.fullname} <a href="@{Application.signout()}">Sign out</a> 
+    		Welcome, ${signedUser.firstName} <a href="@{Application.signout()}">Sign out</a> 
 		#{/else}
       </div>
       
