--- a/SEBA_FitNex/app/views/Application/index.html
+++ b/SEBA_FitNex/app/views/Application/index.html
@@ -1,39 +1,118 @@
-#{extends 'main.html' /} #{set title:'Home' /}
+#{extends 'fitness-template.html' /}
+#{set title:'FITNEX Home' /}
+#{set moreStyles:"
 
-#{if signedUser}	
-	Welcome, ${signedUser.fullname}        <a href="@{Application.signout()}">Sign out</a> 
-#{/if}
+	#mainContentDiv{
+	padding: 0.5em;
+	}
 
-<ul>
-	<li><a href="#">Home</a></li>
-	<li><a href="#">Login</a></li>
-	<li><a href="#">Tutorials</a></li>
-	<li><a href="#">Exercises</a></li>
-</ul>
+  	#mainContentDiv img, #mainContentDiv #info{
+		float: left;
+	}
 
-#{if !signedUser}
-<br/><br/>	
-<form action="@{Application.signinform()}" method="post">
-	Sign in:
-	<table BORDER="0">
-		<tr>
-			<td>E-mail:</td>
-			<td><input type="text" name="email" value="" size="25"
-				maxlength="50" /></td>
-		</tr>
-		<tr>
-			<td>Password:</td>
-			<td><input type="text" name="password" value="" size="25"
-				maxlength="50" /></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td><input type="submit" value="Sign in" size="25"
-				maxlength="50" /></td>
-		</tr>
-		
-	</table>
-</form>
-<br/><br/>
-No account yet? <a href="@{Application.signup()}">  Sign up</a>
-#{/if}
+	#mainContentDiv img{
+		width: 50%;
+		height: 80%;
+	}
+
+	#mainContentDiv table{
+	margin-left: 1em;
+	}
+
+	#mainContentDiv table caption{
+	font-weight: bold;
+	margin-bottom: 0.85em;	
+	}
+
+	#mainContentDiv table td{
+	font-size: 0.8em;
+	height: 1.5em;
+	}
+
+	#mainContentDiv ul{
+	list-style-type: star;
+	}
+
+	#mainContentDiv ul li{
+	font-size: 0.8em;
+	height: 2em
+	}
+" /}
+
+<div id="leftDiv">
+      <div id="logoDiv"> <img src="@{'/public/images/logo.png'}" style="height:100%;width:100%;"></img> </div>
+      <div id="leftNavDiv">
+        <ul>
+          <li><a class="current" href="/">Home</a></li>
+          <li><a href="/about_us.html">About Us</a></li>
+          <li><a href="/Articles/articles.html">Articles</a></li>
+          <li><a href="/Tutorials/tutorials.html">Tutorials</a></li>         
+          <li><a href="/Exercises/exercises.html">Exercises</a></li>
+          <li><a href="/bmi_calculator.html">BMI Calculator</a></li>
+	  <li><a href="/bmi_history.html">BMI History</a></li>
+          <li><a href="/equipments_for_you.html">Equipments for you!</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+    <div id="centreDiv">
+      <div id="inspireQuotesDiv"> <img src="@{'/public/images/banner_home.png'}" style="height:100%;width:100%;"></img></div>
+      <div id="breadCrumbsDiv"><a href="/">Home</a></div>
+      <div id="mainContentDiv" style="margin-top:0px;"> 
+	<img src="@{'/public/images/gym_exercise.jpg'}" />
+	<div id="info">
+		<ul>
+			<li>Personal Coaching</li>
+			<li>Exercise Classes</li>
+			<li>Order for Equipments</li>
+			<li>Lead a balanced life</li>
+		</ul>
+		<table border="1">
+			<caption>Hours of Operation</caption>		
+			<tbody>
+				<tr><td>Mondays - Thursday</td><td>7am - 5pm</td></tr>
+				<tr><td>Fridays</td><td>6am - 6pm</td></tr>
+				<tr><td>Saturdays</td><td>5am - 8pm</td></tr>
+				<tr><td>Sundays</td><td>9am - 5pm</td></tr>		
+			</tbody>
+		</table>
+	</div>
+	<br style="clear: all" />
+     </div>
+    </div>
+    <div id="rightDiv">
+      #{if !signedUser}    
+       <div id="loginBMIDiv">	 
+      
+        <form method="post" name="frmLogin" id="frmLogin" action="@{Application.signinform()}">
+          <fieldset> <legend>Login</legend> <span>Username</span>    <input type="text"
+              id="txtUsername" name="txtUsername" /> <br />
+            <span>Password</span>     <input type="password" id="txtPassword" name="txtPassword" /><br />
+            <input type="submit" id="btnSubmit" name="btnSubmit" value="Login" /><br />
+            <span>Don't have an account? <br />
+              <a href="@{Application.signup()}">Join now for free.</a></span> </fieldset>
+        </form>
+        </div>
+         #{/if}
+         #{else}
+        <div id="loginBMIDiv"> <span id="welcome">Welcome, ${signedUser.firstName}</span>
+        <h5>Recent BMI Report</h5>
+        <span id="age">Age: </span> <span id="weight">Weight: </span> <span
+          id="height">Height: </span> <span id="bmi">BMI: </span>
+           
+          <a href="@{Application.signout()}">Sign out</a>
+          </div>
+    	 
+		#{/else}
+      
+      <div id="workoutDiv"> Workout Woman</div>
+      <div id="searchDiv">
+        <form method="post" name="frmSearch" id="frmSearch" action="submit">
+          Search   <input type="text" id="txtSearch" name="txtSearch" /> </form>
+      </div>
+      <div class="advertDiv" id="advertDiv1"></div>
+      <div class="advertDiv" id="advertDiv2"></div>
+      <div class="advertDiv" id="advertDiv3"></div>
+    </div>
+    <br style="clear: both;" />
+    <div id="footerDiv"> Copyright 2013</div>
