--- a/SEBA_FitNex/app/views/Application/registration.html
+++ b/SEBA_FitNex/app/views/Application/registration.html
@@ -1,70 +1,56 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="content-type"
-	content="application/xhtml+xml; charset=utf-8" />
-<script src="views/Application/script.js" type="text/javascript"></script>
-<style type="text/css">
-#mainContentDiv h2 {
-	text-align: center;
-	font-weight: bold;
-	padding-top: 10px;
-	height: 10px;
-}
+#{extends 'fitness-template.html' /}
+#{set title:'Registration' /}
+#{set moreStyles:"
+  	#mainContentDiv h2{
+        text-align: center;
+        font-weight: bold;
+        padding-top: 10px;    
+        height: 10px;
+      }
+      
+      #mainContentDiv h3{
+       text-align: center;
+        font-weight: bold;
+        padding-top: 2px;
+      }
+      
+      #mainContentDiv form table{
+        margin-left: 10px;
+        width: 90%;        
+      }
+      
+      #mainContentDiv form table td{
+      font-size: 0.8em;        
+      }
+      
+      form td.right{
+       text-align: right;
+      }
+" /}
 
-#mainContentDiv h3 {
-	text-align: center;
-	font-weight: bold;
-	padding-top: 2px;
-}
-
-#mainContentDiv form table {
-	margin-left: 10px;
-	width: 90%;
-}
-
-#mainContentDiv form table td {
-	font-size: 0.8em;
-}
-
-form td.right {
-	text-align: right;
-}
-</style>
-<link rel="stylesheet" href="../public/stylesheets/mainStyle.css" type="text/css" />
-<title>FitNex Mockup</title>
-<meta content="omuyelijah" name="author" />
-<meta content="A general mockup for website pages" name="description" />
-<meta content="BlueGriffon wysiwyg editor" name="generator" />
-</head>
-<body>
-	<div id="leftDiv">
-		<div id="logoDiv">
-			<img src="../public/images/logo.png" style="height: 100%; width: 100%;"></img>
-		</div>
-		<div id="leftNavDiv">
-			<ul>
-				<li><a class="current" href="home.html">Home</a></li>
-				<li><a href="about-us.html">About Us</a></li>
-				<li><a href="articles.html">Articles</a></li>
-				<li><a href="tutorials.html">Tutorials</a></li>
-				<li><a href="exercises.html">Exercises</a></li>
-				<li><a href="bmi-calculator.html">BMI Calculator</a></li>
-				<li><a href="equipments-for-you.html">Equipments for you!</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
-	</div>
-	<div id="centreDiv">
-		<div id="inspireQuotesDiv"></div>
-		<div id="breadCrumbsDiv">
-			<a href="@{Application.index()}">Home</a> &gt; <a href="@{Application.signinform()}">Registration</a>
-		</div>
-		<div id="mainContentDiv">
-			<h2>FitNex is Free!</h2>
-			<h3>Join us now.</h3>
-			<form name="frmRegister" id="frmRegister" action="@{Application.signupform()}" method="post" >
+    <div id="leftDiv">
+      <div id="logoDiv"> <img src="@{'/public/images/logo.png'}" style="height:100%;width:100%;"></img> </div>
+      <div id="leftNavDiv">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about_us.html">About Us</a></li>
+          <li><a href="Articles/articles.html">Articles</a></li>
+          <li><a href="Tutorials/tutorials.html">Tutorials</a></li>         
+          <li><a href="Exercises/exercises.html">Exercises</a></li>
+          <li><a href="/bmi_calculator.html">BMI Calculator</a></li>
+	  <li><a href="/bmi_history.html">BMI History</a></li>
+          <li><a href="/equipments_for_you.html">Equipments for you!</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+    <div id="centreDiv">
+      <div id="inspireQuotesDiv"> <img src="@{'/public/images/banner_home.png'}" style="height:100%;width:100%;"></img></div>
+      <div id="breadCrumbsDiv"><a href="/">Home</a> &gt; <a href="/registration.html">Registration</a></div>
+      <div id="mainContentDiv">
+        <h2>FitNex is Free!</h2>
+        <h3>Join us now.</h3>
+     <form name="frmRegister" id="frmRegister" action="@{Application.signupform()}" method="post" >
 				<table>
 					<tbody>
 						<tr>
@@ -163,34 +149,30 @@ form td.right {
 					</tbody>
 				</table>
 			</form>
-		</div>
-	</div>
-	<div id="rightDiv">
-		<div id="loginBMIDiv">
-			<form method="post" name="frmLogin" id="frmLogin" action="submit">
-				<fieldset>
-					<legend>Login</legend>
-					<span>Username</span>    <input type="text" id="txtUsername"
-						name="txtUsername" /> <br /> <span>Password</span>     <input
-						type="password" id="txtPassword" name="txtPassword" /><br /> <input
-						type="submit" id="btnSubmit" name="btnSubmit" value="Login" /><br />
-					<span>Don't have an account? <br /> <a href="@{Application.signinform()}">Join
-							now for free.</a></span>
-				</fieldset>
-			</form>
-		</div>
-		<div id="workoutDiv">Workout Woman</div>
-		<div id="searchDiv">
-			<form method="post" name="frmSearch" id="frmSearch" action="submit">
-				Search   <input type="text" id="txtSearch" name="txtSearch" />
-			</form>
-		</div>
-		<div class="advertDiv" id="advertDiv1"></div>
-		<div class="advertDiv" id="advertDiv2"></div>
-		<div class="advertDiv" id="advertDiv3"></div>
-	</div>
-	<div id="clearDiv"></div>
-	<br />
-	<div id="footerDiv">Copyright 2013</div>
-</body>
+      </div>
+    </div>
+    <div id="rightDiv">
+      <div id="loginBMIDiv">
+        <form method="post" name="frmLogin" id="frmLogin" action="@{Application.signinform()}">
+          <fieldset> <legend>Login</legend> <span>Username</span>    <input type="text"
+              id="txtUsername" name="txtUsername" /> <br />
+            <span>Password</span>     <input type="password" id="txtPassword" name="txtPassword" /><br />
+            <input type="submit" id="btnSubmit" name="btnSubmit" value="Login" /><br />
+            <span>Don't have an account? <br />
+              <a href="@{Application.signup()}">Join now for free.</a></span> </fieldset>
+        </form>
+      </div>
+      <div id="workoutDiv"> Workout Woman</div>
+      <div id="searchDiv">
+        <form method="post" name="frmSearch" id="frmSearch" action="submit">
+          Search   <input type="text" id="txtSearch" name="txtSearch" /> </form>
+      </div>
+      <div class="advertDiv" id="advertDiv1"></div>
+      <div class="advertDiv" id="advertDiv2"></div>
+      <div class="advertDiv" id="advertDiv3"></div>
+    </div>
+    <div id="clearDiv"></div>
+    <br />
+    <div id="footerDiv"> Copyright 2013</div>
+  </body>
 </html>
