--- a/SEBA_FitNex/app/views/Articles/articles.html
+++ b/SEBA_FitNex/app/views/Articles/articles.html
@@ -68,10 +68,12 @@
       <div id="mainContentDiv">
         <h4>Recent Articles</h4>
         <ul>
-          <li><a href="/Articles/article.html">How
-              to lose weight in 2 weeks</a>.</li>
-          <li>Article 2</li>
-          <li>Article 3</li>
+        	#{list articleList, as:'article'}
+    			<li><a href = "@{Articles.loadArticle(article.id)}">${article.title}</a></li>
+			#{/list}     
+			#{else}
+			No articles for mow
+			#{/else}     
         </ul>
         <form name="frmSearch" id="frmSearch" method="post">
           <fieldset> <legend>Search for Articles</legend>
