--- a/SEBA_FitNex/app/views/Articles/articles_intermediate.html
+++ b/SEBA_FitNex/app/views/Articles/articles_intermediate.html
@@ -70,9 +70,12 @@
       <div id="mainContentDiv">
         <h4>Intermediate Articles</h4>
         <ul>
-          <li><a href="/Articles/article.html">How to lose weight in 2 weeks</a>.</li>
-          <li>Article 2</li>
-          <li>Article 3</li>
+          #{list articleList, as:'article'}
+    			<li><a href = "@{Articles.loadArticle(article.id)}">${article.title}</a></li>
+		  #{/list}  
+		  #{else}
+			No articles for mow
+		  #{/else}        
         </ul>
         <br />
         <br />
