part of the tutorial Complete sign in logic Removed the righ Div to the fitness template to reuse in every page

--- a/SEBA_FitNex/app/views/Application/bmi_history.html
+++ b/SEBA_FitNex/app/views/Application/bmi_history.html
@@ -61,22 +61,22 @@
           </table>          	
       </div>
     </div>
-    <div id="rightDiv">
-      <div id="loginBMIDiv"> <span id="welcome">Welcome User</span>
-        <h5>Recent BMI Report</h5>
-        <span id="age">Age: </span> <span id="weight">Weight: </span> <span
-          id="height">Height: </span> <span id="bmi">BMI: </span> </div>
-      <div id="workoutDiv">Workout Woman</div>
-      <div id="searchDiv">
-        <form action="submit" id="frmSearch" name="frmSearch" method="post">
-          Search     <input type="text" name="txtSearch" id="txtSearch" /> </form>
-      </div>
-      <div id="advertDiv1" class="advertDiv"></div>
-      <div id="advertDiv2" class="advertDiv"></div>
-      <div id="advertDiv3" class="advertDiv"></div>
-    </div>
-    <div id="clearDiv"></div>
-    <br />
-    <div id="footerDiv"> Copyright 2013</div>
-  </body>
-</html>
+<!--     <div id="rightDiv"> -->
+<!--       <div id="loginBMIDiv"> <span id="welcome">Welcome User</span> -->
+<!--         <h5>Recent BMI Report</h5> -->
+<!--         <span id="age">Age: </span> <span id="weight">Weight: </span> <span -->
+<!--           id="height">Height: </span> <span id="bmi">BMI: </span> </div> -->
+<!--       <div id="workoutDiv">Workout Woman</div> -->
+<!--       <div id="searchDiv"> -->
+<!--         <form action="submit" id="frmSearch" name="frmSearch" method="post"> -->
+<!--           Search     <input type="text" name="txtSearch" id="txtSearch" /> </form> -->
+<!--       </div> -->
+<!--       <div id="advertDiv1" class="advertDiv"></div> -->
+<!--       <div id="advertDiv2" class="advertDiv"></div> -->
+<!--       <div id="advertDiv3" class="advertDiv"></div> -->
+<!--     </div> -->
+<!--     <div id="clearDiv"></div> -->
+<!--     <br /> -->
+<!--     <div id="footerDiv"> Copyright 2013</div> -->
+<!--   </body> -->
+<!-- </html> -->
