--- a/SEBA_FitNex/app/views/Application/index.html
+++ b/SEBA_FitNex/app/views/Application/index.html
@@ -80,39 +80,39 @@
 	<br style="clear: all" />
      </div>
     </div>
-    <div id="rightDiv">
-      #{if !signedUser}    
-       <div id="loginBMIDiv">	 
+<!--     <div id="rightDiv"> -->
+<!--       #{if !signedUser}     -->
+<!--        <div id="loginBMIDiv">	  -->
       
-        <form method="post" name="frmLogin" id="frmLogin" action="@{Application.signinform()}">
-          <fieldset> <legend>Login</legend> <span>Username</span>    <input type="text"
-              id="txtUsername" name="txtUsername" /> <br />
-            <span>Password</span>     <input type="password" id="txtPassword" name="txtPassword" /><br />
-            <input type="submit" id="btnSubmit" name="btnSubmit" value="Login" /><br />
-            <span>Don't have an account? <br />
-              <a href="@{Application.signup()}">Join now for free.</a></span> </fieldset>
-        </form>
-        </div>
-         #{/if}
-         #{else}
-        <div id="loginBMIDiv"> <span id="welcome">Welcome, ${signedUser.firstName}</span>
-        <h5>Recent BMI Report</h5>
-        <span id="age">Age: </span> <span id="weight">Weight: </span> <span
-          id="height">Height: </span> <span id="bmi">BMI: </span>
+<!--         <form method="post" name="frmLogin" id="frmLogin" action="@{Application.signinform()}"> -->
+<!--           <fieldset> <legend>Login</legend> <span>Username</span>    <input type="text" -->
+<!--               id="txtUsername" name="txtUsername" /> <br /> -->
+<!--             <span>Password</span>     <input type="password" id="txtPassword" name="txtPassword" /><br /> -->
+<!--             <input type="submit" id="btnSubmit" name="btnSubmit" value="Login" /><br /> -->
+<!--             <span>Don't have an account? <br /> -->
+<!--               <a href="@{Application.signup()}">Join now for free.</a></span> </fieldset> -->
+<!--         </form> -->
+<!--         </div> -->
+<!--          #{/if} -->
+<!--          #{else} -->
+<!--         <div id="loginBMIDiv"> <span id="welcome">Welcome, ${signedUser.firstName}</span> -->
+<!--         <h5>Recent BMI Report</h5> -->
+<!--         <span id="age">Age: </span> <span id="weight">Weight: </span> <span -->
+<!--           id="height">Height: </span> <span id="bmi">BMI: </span> -->
            
-          <a href="@{Application.signout()}">Sign out</a>
-          </div>
+<!--           <a href="@{Application.signout()}">Sign out</a> -->
+<!--           </div> -->
     	 
-		#{/else}
+<!-- 		#{/else} -->
       
-      <div id="workoutDiv"> Workout Woman</div>
-      <div id="searchDiv">
-        <form method="post" name="frmSearch" id="frmSearch" action="submit">
-          Search   <input type="text" id="txtSearch" name="txtSearch" /> </form>
-      </div>
-      <div class="advertDiv" id="advertDiv1"></div>
-      <div class="advertDiv" id="advertDiv2"></div>
-      <div class="advertDiv" id="advertDiv3"></div>
-    </div>
-    <br style="clear: both;" />
-    <div id="footerDiv"> Copyright 2013</div>
+<!--       <div id="workoutDiv"> Workout Woman</div> -->
+<!--       <div id="searchDiv"> -->
+<!--         <form method="post" name="frmSearch" id="frmSearch" action="submit"> -->
+<!--           Search   <input type="text" id="txtSearch" name="txtSearch" /> </form> -->
+<!--       </div> -->
+<!--       <div class="advertDiv" id="advertDiv1"></div> -->
+<!--       <div class="advertDiv" id="advertDiv2"></div> -->
+<!--       <div class="advertDiv" id="advertDiv3"></div> -->
+<!--     </div> -->
+<!--     <br style="clear: both;" /> -->
+<!--     <div id="footerDiv"> Copyright 2013</div> -->
