--- a/SEBA_FitNex/app/views/Exercises/exercises.html
+++ b/SEBA_FitNex/app/views/Exercises/exercises.html
@@ -111,20 +111,20 @@
         </table>
       </div>
     </div>
-    <div id="rightDiv">
-      <div id="loginBMIDiv"> <span id="welcome">Welcome User</span>
-        <h5>Recent BMI Report</h5>
-        <span id="age">Age: </span> <span id="weight">Weight: </span> <span
-          id="height">Height: </span> <span id="bmi">BMI: </span> </div>
-      <div id="workoutDiv">Workout Woman</div>
-      <div id="searchDiv">
-        <form method="post" name="frmSearch" id="frmSearch" action="submit">
-          Search     <input type="text" id="txtSearch" name="txtSearch" /> </form>
-      </div>
-      <div class="advertDiv" id="advertDiv1"></div>
-      <div class="advertDiv" id="advertDiv2"></div>
-      <div class="advertDiv" id="advertDiv3"></div>
-    </div>
-    <div id="clearDiv"></div>
-    <br />
-    <div id="footerDiv"> Copyright 2013</div>
+<!--     <div id="rightDiv"> -->
+<!--       <div id="loginBMIDiv"> <span id="welcome">Welcome User</span> -->
+<!--         <h5>Recent BMI Report</h5> -->
+<!--         <span id="age">Age: </span> <span id="weight">Weight: </span> <span -->
+<!--           id="height">Height: </span> <span id="bmi">BMI: </span> </div> -->
+<!--       <div id="workoutDiv">Workout Woman</div> -->
+<!--       <div id="searchDiv"> -->
+<!--         <form method="post" name="frmSearch" id="frmSearch" action="submit"> -->
+<!--           Search     <input type="text" id="txtSearch" name="txtSearch" /> </form> -->
+<!--       </div> -->
+<!--       <div class="advertDiv" id="advertDiv1"></div> -->
+<!--       <div class="advertDiv" id="advertDiv2"></div> -->
+<!--       <div class="advertDiv" id="advertDiv3"></div> -->
+<!--     </div> -->
+<!--     <div id="clearDiv"></div> -->
+<!--     <br /> -->
+<!--     <div id="footerDiv"> Copyright 2013</div> -->
