--- a/SEBA_FitNex/app/views/Application/about_us.html
+++ b/SEBA_FitNex/app/views/Application/about_us.html
@@ -63,26 +63,24 @@
 	<p>Our membership base is growing by the day and we would encourage you to try out our services. You 	are welcome to our site and we encourage you to take advantage of this opportunity. You will be glad you did.</p>
      </div>
     </div>
-    <div id="rightDiv">
-      <div id="loginBMIDiv">
-        <form method="post" name="frmLogin" id="frmLogin" action="submit">
-          <fieldset> <legend>Login</legend> <span>Username</span>    <input type="text"
-              id="txtUsername" name="txtUsername" /> <br />
-            <span>Password</span>     <input type="password" id="txtPassword" name="txtPassword" /><br />
-            <input type="submit" id="btnSubmit" name="btnSubmit" value="Login" /><br />
-            <span>Don't have an account? <br />
-              <a href="registration.html">Join now for free.</a></span> </fieldset>
-        </form>
-      </div>
-      <div id="workoutDiv"> Workout Woman</div>
-      <div id="searchDiv">
-        <form method="post" name="frmSearch" id="frmSearch" action="submit">
-          Search   <input type="text" id="txtSearch" name="txtSearch" /> </form>
-      </div>
-      <div class="advertDiv" id="advertDiv1"></div>
-      <div class="advertDiv" id="advertDiv2"></div>
-      <div class="advertDiv" id="advertDiv3"></div>
-    </div>
-    <div id="clearDiv"></div>
-    <br />
-    <div id="footerDiv"> Copyright 2013</div>
+<!--     <div id="rightDiv"> -->
+<!--       <div id="loginBMIDiv"> -->
+<!--         <form method="post" name="frmLogin" id="frmLogin" action="submit"> -->
+<!--           <fieldset> <legend>Login</legend> <span>Username</span>    <input type="text" -->
+<!--               id="txtUsername" name="txtUsername" /> <br /> -->
+<!--             <span>Password</span>     <input type="password" id="txtPassword" name="txtPassword" /><br /> -->
+<!--             <input type="submit" id="btnSubmit" name="btnSubmit" value="Login" /><br /> -->
+<!--             <span>Don't have an account? <br /> -->
+<!--               <a href="registration.html">Join now for free.</a></span> </fieldset> -->
+<!--         </form> -->
+<!--       </div> -->
+<!--       <div id="workoutDiv"> Workout Woman</div> -->
+<!--       <div id="searchDiv"> -->
+<!--         <form method="post" name="frmSearch" id="frmSearch" action="submit"> -->
+<!--           Search   <input type="text" id="txtSearch" name="txtSearch" /> </form> -->
+<!--       </div> -->
+<!--       <div class="advertDiv" id="advertDiv1"></div> -->
+<!--       <div class="advertDiv" id="advertDiv2"></div> -->
+<!--       <div class="advertDiv" id="advertDiv3"></div> -->
+<!--     </div> -->
+    
