--- a/SEBA_FitNex/app/views/Exercises/exercises_expert.html
+++ b/SEBA_FitNex/app/views/Exercises/exercises_expert.html
@@ -70,9 +70,12 @@
       <div id="mainContentDiv">
         <h4>Expert Exercises</h4>
         <ul>
-          <li>Exercise 1</li>
-          <li>Exercise 2</li>
-          <li>Exercise 3</li>
+        	#{list exerciseList, as:'exercise'}
+    			<li><a href = "@{Exercises.loadExercise(exercise.id)}">${exercise.title}</a></li>
+			#{/list}     
+			#{else}
+			No exercises for now
+			#{/else}     
         </ul>
         <br />
         <br />
