--- a/SEBA_FitNex/app/views/Application/bmi_history.html
+++ b/SEBA_FitNex/app/views/Application/bmi_history.html
@@ -43,20 +43,27 @@
         <h3>BMI HISTORY</h3>          
           <table id="historyTable" border="1">
 	    <thead>
-		<tr>
-                <th>SN</th>
+		<tr>    
+				<th>Date   </th>         
                 <th>Weight (Kg)</th>
-		<th>Height (Cm)</th>
-		<th>BMI Value</th>
-              </tr>
+				<th>Height (Cm)</th>
+				<th>BMI Value</th>
+        </tr>
 	    </thead>
-            <tbody>              
+            <tbody>
+              #{if signedUser!=null }
+              #{list signedUser.BMIHistoryList, as:'bmiHistory'}               
               <tr>
-                <td>1</td>
-                <td>60</td>
-		<td>5m</td>
-		<td>42</td>
-              </tr>              
+                <td>${bmiHistory.date}</td>
+                <td>${bmiHistory.weight}</td>
+				<td>${bmiHistory.height}</td>
+				<td>${bmiHistory.BMIValue}</td>
+              </tr>
+              #{/list}             
+              #{/if}
+              #{else}
+              Please sign in first.
+              #{/else} 
             </tbody>
           </table>          	
       </div>
