--- a/SEBA_FitNex/app/views/Application/bmi_history.html
+++ b/SEBA_FitNex/app/views/Application/bmi_history.html
@@ -1,73 +1,93 @@
-#{extends 'fitness-template.html' /}
-#{set title:'BMI History' /}
-#{set moreStyles:"
-      
-      #mainContentDiv h3{
-      padding-top: 10px;
-      text-align: center;
-      }         
-      
-      #mainContentDiv #historyTable{
-	margin-left: 3em;	
-	width: 65%;
-      }
+#{extends 'fitness-template.html' /} #{set title:'BMI History' /} #{set
+moreStyles:" #mainContentDiv h3{ padding-top: 10px; text-align: center;
+} #mainContentDiv #historyTable{ margin-left: 3em; width: 65%; }
 
-      #historyTable td{
-	text-align: center;
-	}
-      
-" /}
+#historyTable td{ text-align: center; } " /}
+
+<script>
+	$(function() {
+		$('#container').highcharts({
+			chart : {
+				type: 'line'
+			},
+			title : {
+				text : 'BMI history'
+			},
+			xAxis : {
+				type: 'datetime',
+				title : { 
+					text : 'Date' 
+					} 
+			},
+			yAxis : {
+				title : {
+					text : 'BMI'
+				}
+			},
+			series : [ {			
+				data: ${signedUser.getBMIChartData()}
+			}],
+		});
+	});
+</script>
+<div id="leftDiv">
+	<div id="logoDiv">
+		<img src="@{'/public/images/logo.png'}"
+			style="height: 100%; width: 100%;"></img>
+	</div>
+	<div id="leftNavDiv">
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="/about_us.html">About Us</a></li>
+			<li><a href="Articles/articles.html">Articles</a></li>
+			<li><a href="Tutorials/tutorials.html">Tutorials</a></li>
+			<li><a href="Exercises/exercises.html">Exercises</a></li>
+			<li><a href="/bmi_calculator.html">BMI Calculator</a></li>
+			<li><a href="/bmi_history.html" class="current">BMI History</a></li>
+			<li><a href="/equipments_for_you.html">Equipments for you!</a></li>
+			<li><a href="/contact.html">Contact</a></li>
+		</ul>
+	</div>
+</div>
+<div id="centreDiv">
+	<div id="inspireQuotesDiv">
+		<img src="@{'/public/images/banner_bmi.png'}"
+			style="height: 100%; width: 100%;"></img>
+	</div>
+	<div id="breadCrumbsDiv">
+		<a href="/">Home</a> &gt; <a href="/bmi_history.html">BMI History</a>
+	</div>
+	<div id="mainContentDiv">
+		<h3>BMI HISTORY</h3>
+		<table id="historyTable" border="1">
+			<thead>
+				<tr>
+					<th>Date</th>
+					<th>Weight (Kg)</th>
+					<th>Height (Cm)</th>
+					<th>BMI Value</th>
+				</tr>
+			</thead>
+			<tbody>
+				#{if signedUser!=null } #{list signedUser.BMIHistoryList,
+				as:'bmiHistory'}
+				<tr>
+					<td>${bmiHistory.date}</td>
+					<td>${bmiHistory.weight}</td>
+					<td>${bmiHistory.height}</td>
+					<td>${bmiHistory.BMIValue}</td>
+				</tr>
+				#{/list} #{/if} #{else} Please sign in first. #{/else}
+			</tbody>
+		</table>
+		<br><br>
+		<div id="container" ></div>
+		
+	</div>
+</div>
 
 
-    <div id="leftDiv">
-      <div id="logoDiv"> <img src="@{'/public/images/logo.png'}" style="height:100%;width:100%;"></img> </div>
-      <div id="leftNavDiv">
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about_us.html">About Us</a></li>
-          <li><a href="Articles/articles.html">Articles</a></li>
-          <li><a href="Tutorials/tutorials.html">Tutorials</a></li>         
-          <li><a href="Exercises/exercises.html">Exercises</a></li>
-          <li><a href="/bmi_calculator.html">BMI Calculator</a></li>
-	  <li><a href="/bmi_history.html" class="current">BMI History</a></li>
-          <li><a href="/equipments_for_you.html">Equipments for you!</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-    <div id="centreDiv">
-      <div id="inspireQuotesDiv"> <img src="@{'/public/images/banner_bmi.png'}" style="height:100%;width:100%;"></img></div>
-      <div id="breadCrumbsDiv"><a href="/">Home</a> &gt; <a href="/bmi_history.html">BMI
-          History</a></div>
-      <div id="mainContentDiv">
-        <h3>BMI HISTORY</h3>          
-          <table id="historyTable" border="1">
-	    <thead>
-		<tr>    
-				<th>Date   </th>         
-                <th>Weight (Kg)</th>
-				<th>Height (Cm)</th>
-				<th>BMI Value</th>
-        </tr>
-	    </thead>
-            <tbody>
-              #{if signedUser!=null }
-              #{list signedUser.BMIHistoryList, as:'bmiHistory'}               
-              <tr>
-                <td>${bmiHistory.date}</td>
-                <td>${bmiHistory.weight}</td>
-				<td>${bmiHistory.height}</td>
-				<td>${bmiHistory.BMIValue}</td>
-              </tr>
-              #{/list}             
-              #{/if}
-              #{else}
-              Please sign in first.
-              #{/else} 
-            </tbody>
-          </table>          	
-      </div>
-    </div>
+
 <!--     <div id="rightDiv"> -->
 <!--       <div id="loginBMIDiv"> <span id="welcome">Welcome User</span> -->
 <!--         <h5>Recent BMI Report</h5> -->
