workout plan start

--- a/SEBA_FitNex/app/views/Application/index.html
+++ b/SEBA_FitNex/app/views/Application/index.html
@@ -49,8 +49,9 @@
           <li><a href="/Tutorials/tutorials.html">Tutorials</a></li>         
           <li><a href="/Exercises/exercises.html">Exercises</a></li>
           <li><a href="/bmi_calculator.html">BMI Calculator</a></li>
-	  <li><a href="/bmi_history.html">BMI History</a></li>
+	  	  <li><a href="/bmi_history.html">BMI History</a></li>
           <li><a href="/equipments_for_you.html">Equipments for you!</a></li>
+          <li><a href="/workout_plan.html">Workout plan</a></li>
           <li><a href="/contact.html">Contact</a></li>
         </ul>
       </div>
