--- a/SEBA_FitNex/app/views/fitness-template.html
+++ b/SEBA_FitNex/app/views/fitness-template.html
@@ -4,6 +4,11 @@
 <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="http://code.highcharts.com/highcharts.js"></script>
+<link href='../public/stylesheets/fullcalendar.css' rel='stylesheet' />
+<link href='../public/stylesheets/fullcalendar.print.css' rel='stylesheet' media='print' />
+<script src='../public/javascripts/jquery-1.9.1.min.js'></script>
+<script src='../public/javascripts/jquery-ui-1.10.2.custom.min.js'></script>
+<script src='../public/javascripts/fullcalendar.min.js'></script>
 
 <script type="text/javascript">
 	function calculateBMI()
