--- a/SEBA_FitNex/app/views/fitness-template.html
+++ b/SEBA_FitNex/app/views/fitness-template.html
@@ -7,7 +7,10 @@
 	<link type="text/css" href="@{'/public/stylesheets/bootstrap-responsive.min.css'}" rel="stylesheet" />
 	<link type="text/css" href="@{'/public/stylesheets/mediaqueries.css'}" rel="stylesheet" />
 	<link rel="stylesheet" href="@{'/public/stylesheets/mainStyle.css'}">
+	<link href='../public/stylesheets/fullcalendar.css' rel='stylesheet' />
+	<link href='../public/stylesheets/fullcalendar.print.css' rel='stylesheet' media='print' />
 	<link rel="stylesheet" href="@{'/public/stylesheets/jquery-ui-1.10.3.custom.min.css'}">
+	
 	<link rel="shortcut icon" type="image/ico" href="@{'/public/images/favicon.ico'}">
 	<style type="text/css">	   
 		#{get 'moreStyles' /}  	   
@@ -16,8 +19,17 @@
 	<script src="@{'/public/javascripts/jquery-2.0.3.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>	
 	<script src="@{'/public/javascripts/jquery-ui-1.10.3.custom.min.js'}" type="text/javascript"></script>
 	<script src="@{'/public/javascripts/bootstrap.js'}" type="text/javascript"></script>
+	<link href='../public/stylesheets/fullcalendar.css' rel='stylesheet' />
+	<link href='../public/stylesheets/fullcalendar.print.css' rel='stylesheet' media='print' />
+	<script src='../public/javascripts/jquery-1.9.1.min.js'></script>
+	<script src='../public/javascripts/jquery-ui-1.10.2.custom.min.js'></script>
+	<script src='../public/javascripts/fullcalendar.min.js'></script>
 	<script src="@{'/public/javascripts/bootstrap.min.js'}" type="text/javascript"></script>
-    	<script src="@{'/public/javascripts/script.js'}" type="text/javascript"></script>    
+    	<script src="@{'/public/javascripts/script.js'}" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="http://code.highcharts.com/highcharts.js"></script>
+    
+    	    
         #{get 'moreScripts' /}
     </head>
     <body #{get 'script' /}>
@@ -30,6 +42,7 @@
           <li class="#{get 'tutorials' /}"><a href="/Tutorials/tutorials.html">Tutorials</a></li>         
           <li class="#{get 'exercises' /}"><a href="/Exercises/exercises.html">Exercises</a></li>
           <li class="#{get 'bmiCalculator' /}"><a href="/bmi_calculator.html">BMI Calculator</a></li>
+          <li class="#{get 'bmiHistory' /}"><a href="/bmi_history.html">BMI History</a></li>
           <li class="#{get 'workoutPlan' /}"><a href="/workout_plan.html">Workout Plan</a></li>
           <li class="#{get 'equipmentForYou' /}"><a href="/equipments_for_you.html">Equipments for you!</a></li>
 		  <li class="#{get 'aboutUs' /}"><a href="/about_us.html">About Us</a></li>
@@ -72,11 +85,14 @@
    		 	</tr>
    		 	<tr>
    		 		<td class="info">BMI Value</td>
-   		 		<td>${signedUserBMIValue}</td>
+   		 		<td>value</td>
    		 	</tr>
    		 </table>
+   		 <a href="@{Application.signout(signedUser.email)}"> Logout</a>
+   		 
 		#{/else}
-	    </div>     
+	    </div> 
+	     
       <div class="advertDiv" id="advertDiv1"></div>
       <div class="advertDiv" id="advertDiv2"></div>
       <div class="advertDiv" id="advertDiv3"></div>
